src/objects/Federal_Register__c.object
<CustomObject>
    <fields>
        <fullName>ADCVD_Case_Type__c</fullName>
        <formula>TEXT(ADCVD_Case__r.ADCVD_Case_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ADCVD Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADCVD_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ADCVD Case</label>
        <referenceTo>ADCVD_Case__c</referenceTo>
        <relationshipLabel>Federal Registers</relationshipLabel>
        <relationshipName>Federal_Registers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADCVD_Order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ADCVD Order</label>
        <referenceTo>ADCVD_Order__c</referenceTo>
        <relationshipLabel>Federal Registers</relationshipLabel>
        <relationshipName>Federal_Register</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Concat_Text_Values__c</fullName>
        <label>Case Concat Text Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cite_Number__c</fullName>
        <label>Cite Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <formula>TEXT(ADCVD_Case__r.Commodity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commodity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT(ADCVD_Case__r.Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FR_Parent__c</fullName>
        <label>FR Parent</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_URL__c</fullName>
        <description>FR URL</description>
        <inlineHelpText>FR URL</inlineHelpText>
        <label>FR URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IDM_URL__c</fullName>
        <label>IDM URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Investigation</label>
        <referenceTo>Investigation__c</referenceTo>
        <relationshipLabel>Federal Registers</relationshipLabel>
        <relationshipName>Federal_Registers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Litigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Litigation</label>
        <referenceTo>Litigation__c</referenceTo>
        <relationshipLabel>Federal Registers</relationshipLabel>
        <relationshipName>Federal_Registers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Petition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Petition</label>
        <referenceTo>Petition__c</referenceTo>
        <relationshipLabel>Federal Registers</relationshipLabel>
        <relationshipName>Federal_Registers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Short_Name_Text_Value__c</fullName>
        <label>Product Short Name Text Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Short_Name__c</fullName>
        <formula>ADCVD_Case__r.Product_Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Text_Value__c</fullName>
        <label>Product Text Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>ADCVD_Case__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published_Date__c</fullName>
        <label>Published Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Federal Registers</relationshipLabel>
        <relationshipName>Federal_Registers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suspension_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suspension Agreement</label>
        <referenceTo>Suspension_Agreement__c</referenceTo>
        <relationshipLabel>Federal Registers</relationshipLabel>
        <relationshipName>Federal_Registers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Continuation</fullName>
                </value>
                <value>
                    <fullName>Preliminary</fullName>
                </value>
                <value>
                    <fullName>Amended Preliminary</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Amended Final</fullName>
                </value>
                <value>
                    <fullName>ITC Preliminary</fullName>
                </value>
                <value>
                    <fullName>ITC Final</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Postponement</fullName>
                </value>
                <value>
                    <fullName>Post Litigation</fullName>
                </value>
                <value>
                    <fullName>Admin Review Opportunity Notice</fullName>
                </value>
                <value>
                    <fullName>Rescission</fullName>
                </value>
                <value>
                    <fullName>Correction</fullName>
                </value>
                <value>
                    <fullName>Revocation</fullName>
                </value>
                <value>
                    <fullName>Quarterly Scope</fullName>
                </value>
                <value>
                    <fullName>Suspension Agreement</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Federal Register</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FederalRegister_ClosedLocked_Queue_Federal_Register</fullName>
        <filterScope>Queue</filterScope>
        <label>FederalRegister ClosedLocked Queue</label>
        <queue>FederalRegister_ClosedLocked_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FederalRegister_Open_Queue_Federal_Register</fullName>
        <filterScope>Queue</filterScope>
        <label>FederalRegister Open Queue</label>
        <queue>FederalRegister_Open_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FR-{000000}</displayFormat>
        <label>Federal Register Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Federal Registers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Edit_Locked_Record</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Permission.Edit_ADCVD_Locked_Records == false, 
NOT(ISNEW()), 
PRIORVALUE(Locked__c) == true 
)</errorConditionFormula>
        <errorMessage>This record is locked.  Please contact your administrator about unlocking this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_reparent_a_federal_register</fullName>
        <active>false</active>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,AND( $Profile.Name != &apos;System Administrator&apos;,
        OR( ISCHANGED( Investigation__c ) , ISCHANGED( 
Petition__c ) , ISCHANGED( Segment__c ) ) ))</errorConditionFormula>
        <errorMessage>Cannot re-parent a federal register.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_there_is_a_parent</fullName>
        <active>false</active>
        <description>This validation rule makes sure you cannot create a federal register without a Investigation, Petition, Orders, Suspension Agreement or Segment attached to it. If all three of these lookup fields are empty, the validation error message will trigger.</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,AND( ISBLANK( Investigation__c ) , ISBLANK( Segment__c ),
ISBLANK( Petition__c ), ISBLANK(Suspension_Agreement__c ),
ISBLANK( ADCVD_Order__c )))</errorConditionFormula>
        <errorMessage>You must have a Petition, Investigation,  Orders, Suspension Agreement or Segment associated to this Federal Register.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_there_is_only_one_parent</fullName>
        <active>true</active>
        <description>You cannot create a federal register without a single parent record: either an Investigation, Petition, Order, Suspension Agreement or Segment attached to it. If all four of these lookup fields are empty, the validation error message will trigger.</description>
        <errorConditionFormula>AND(
$Setup.Master_Automation__c.ValidationRulesEnabled__c == true, 
Locked__c == false, 
ISNEW(),  
OR( 
  (AND 
  ( ISBLANK(Petition__c),
  ISBLANK(Segment__c),
  ISBLANK(Investigation__c), 
  ISBLANK(ADCVD_Order__c),
  ISBLANK(Suspension_Agreement__c) 
  )
  ),
  (	
	IF(ISBLANK(Petition__c),0,1)+ 
	IF(ISBLANK(Segment__c),0,1)+ 
        IF(ISBLANK(ADCVD_Order__c),0,1)+
	IF(ISBLANK(Investigation__c),0,1)+ 
	IF(ISBLANK(Suspension_Agreement__c),0,1) &gt;1
   )
  ) 
)</errorConditionFormula>
        <errorMessage>You must have either a Petition, Investigation,  ADCVD Order, Suspension Agreement or Segment associated to this Federal Register.</errorMessage>
    </validationRules>
</CustomObject>